--- a/Assignment 5/Assignment 5/BMI 2.0/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/Assignment 5/Assignment 5/BMI 2.0/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -112,10 +112,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="EnhancedBMI.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="EnhancedBMI_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>EnhancedBMI.mdf</DependentUpon>
     </Content>
   </ItemGroup>
