--- a/Assignment 5/Assignment 5/BMI 2.0/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/Assignment 5/Assignment 5/BMI 2.0/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -113,11 +113,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="EnhancedBMI.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="EnhancedBMI.mdf" />
     <Content Include="EnhancedBMI_log.ldf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>EnhancedBMI.mdf</DependentUpon>
     </Content>
   </ItemGroup>
